# Blender-Harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: harness-v1.yml
docs/adr/: 0008-harness-v1-clean-replacement.md
schemas/: comparison-set.v1.schema.json  context-contract.v1.schema.json  evidence-bundle.v1.schema.json  experience-record.v1.schema.json  freshness-assessment.v1.schema.json  hunyuan-job-handle.v1.schema.json  outcome-vector.v1.schema.json  probe-run.v2.schema.json  recipe-promotion.v1.schema.json  recipe-recommendation.v1.schema.json  review-record.v1.schema.json  route-decision.v2.schema.json  route-hypothesis.v2.schema.json  route-recipe.v1.schema.json  tool-capability-snapshot.v1.schema.json  tripo-job-handle.v1.schema.json
scripts/: bl_lipsync_filmstrip.py  bl_lipsync_rig_eval.py  build_hero.py  building_edges.py  dingdiao_gen.py  gen_fx.py  glb_cleanup_gold.py  hf_gen.py  hunyuan3d_gen.py  hunyuan_anim.py  lipsync_eval.sh  lipsync_invariants.py  make_linefig.py  make_path_glyphs.py  make_sbs_alpha.sh  make_xian_crystal.py  narration_amp.py  render_fbx_anim.py  render_glb_anim.py  render_glb_multiview.py  render_skeleton_anim.py  render_threeview.py  reprocess_xian.py  retarget_bake.py  tts_gen.py  zimg.py  zimg_gen.py
tests/: test_hunyuan_adapter.py  test_hunyuan_operations.py  test_learning.py  test_learning_cli.py  test_learning_contracts.py  test_media.py  test_quicklook_blender.py  test_repository_governance.py  test_routes.py  test_schema_contracts.py  test_tripo_adapter.py  test_tripo_cli.py  test_tripo_operations.py
(+120 files in other folders)
