[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-harness"
version = "0.2.0"
description = "A thin, evidence-first Blender production harness"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
bh = "blender_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
